# prometheus-weathermen

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE-APACHE  LICENSE.MIT  LICENSE.spdx  Makefile  README.md  build.rs  clippy.toml  config.toml.dist  flake.nix  prometheus-weathermen.service  weathermen.toml.dist
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-automerge.yml
src/: authentication.rs  bcrypt.rs  config.rs  error.rs  http.rs  http_server.rs  logging.rs  main.rs  prometheus.rs
src/provider/: mod.rs  open_weather.rs  provider.rs  units.rs
src/providers/: cache.rs  deutscher_wetterdienst.rs  dwd.rs  http_request.rs  meteoblue.rs  mod.rs  nogoodnik.rs  open_meteo.rs  open_weather.rs  tomorrow.rs  units.rs
