[package]
name = "prometheus-weathermen"
description = "A prometheus exporter for weather data from various weather APIs"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["prometheus", "prometheus-exporter", "weather", "monitoring"]
categories = ["command-line-utilities"]
repository = "https://github.com/lstrojny/prometheus-weathermen"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["tls"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = "1.0.193"
toml = "0.8.8"
hmac = "0.12.1"
hex = "0.4.3"
sha2 = "0.10.8"
serde_json = "1.0.108"
moka = { version = "0.12.1", features = ["sync"] }
humantime-serde = "1.1.1"
anyhow = "1.0.75"
log = { version = "0.4.20", features = ["serde"] }
tokio = { version = "1.34.0", default-features = false }
clap = { version = "4.4.11", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
figment = { version = "0.10.12", features = ["toml", "env"] }
prometheus-client = "0.22.0"
rocket-basicauth = "2.1.1"
bcrypt = "0.15.0"
openssl = { version = "0.10.61", features = ["vendored"] }
simple_logger = { version = "4.3.0", features = ["timestamps", "colors", "stderr"] }
csv = "1.3.0"
const_format = "0.2.32"
geo = "0.27.0"
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate-miniz"] }
failsafe = "1.2.0"
once_cell = "1.19.0"

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "2.1.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
