[package]
name = "prometheus-weathermen"
edition = "2021"
version = "0.8.0"
description = "A prometheus exporter for weather data from various weather APIs"
keywords = ["prometheus", "prometheus-exporter", "weather", "monitoring"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lstrojny/prometheus-weathermen"

[dependencies]
anyhow = "1.0.79"
bcrypt = "0.15.0"
clap-verbosity-flag = "2.1.1"
const_format = "0.2.32"
csv = "1.3.0"
derive_more = "0.99.17"
hex = "0.4.3"
hmac = "0.12.1"
humantime-serde = "1.1.1"
prometheus-client = "0.22.0"
sha2 = "0.10.8"
toml = "0.8.8"

[dependencies.chrono]
version = "0.4.31"
features = ["serde"]
default-features = false

[dependencies.clap]
version = "4.4.13"
features = ["derive"]

[dependencies.failsafe]
version = "1.2.0"
features = []
default-features = false

[dependencies.figment]
version = "0.10.13"
features = ["toml", "env"]

[dependencies.geo]
version = "0.27.0"
features = []
default-features = false

[dependencies.log]
version = "0.4.20"
default-features = false

[dependencies.moka]
version = "0.12.2"
features = ["sync"]
default-features = false

[dependencies.once_cell]
version = "1.19.0"
features = []
default-features = false

[dependencies.openssl]
version = "0.10.62"
features = ["vendored"]

[dependencies.reqwest]
version = "0.11.23"
features = ["json", "blocking"]

[dependencies.rocket]
version = "0.5.0"
features = ["tls"]

[dependencies.rocket-basicauth]
git = "https://github.com/Owez/rocket-basicauth.git"
rev = "refs/pull/8/head"
features = []

[dependencies.serde]
version = "1.0.194"
features = []

[dependencies.serde_json]
version = "1.0.111"
features = []
default-features = false

[dependencies.simple_logger]
version = "4.3.0"
features = ["time", "timestamps", "colored", "colors"]
default-features = false

[dependencies.tokio]
version = "1.35.1"
features = []
default-features = false

[dependencies.zip]
version = "0.6.6"
features = ["deflate-miniz"]
default-features = false

[dev-dependencies]
pretty_assertions = "1.4.0"

[target."cfg(target_os = \"linux\")".dependencies]
systemd-journal-logger = "2.1.1"

[target."cfg(target_os = \"linux\")".dev-dependencies]

[target."cfg(target_os = \"linux\")".build-dependencies]

[features]
default = []
nightly = []

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release.package]
