[package]
name = "prometheus-weathermen"
edition = "2021"
version = "0.9.0"
description = "A prometheus exporter for weather data from various weather APIs"
keywords = ["prometheus", "prometheus-exporter", "weather", "monitoring"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lstrojny/prometheus-weathermen"
rust-version = " 1.80.0"

[dependencies]
anyhow = "1.0.89"
bcrypt = "0.15.1"
clap-verbosity-flag = "2.2.2"
const_format = "0.2.33"
csv = "1.3.0"
hex = "0.4.3"
hmac = "0.12.1"
humantime-serde = "1.1.1"
prometheus-client = "0.22.2"
sha2 = "0.10.8"
toml = "0.8.13"

[dependencies.derive_more]
version = "1.0.0"
features = ["from", "display", "constructor", "into"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]
default-features = false

[dependencies.clap]
version = "4.5.20"
features = ["derive"]

[dependencies.failsafe]
version = "1.2.0"
features = []
default-features = false

[dependencies.figment]
version = "0.10.19"
features = ["toml", "env"]

[dependencies.geo]
version = "0.28.0"
features = []
default-features = false

[dependencies.log]
version = "0.4.21"
default-features = false

[dependencies.moka]
version = "0.12.7"
features = ["sync"]
default-features = false

[dependencies.once_cell]
version = "1.20.2"
features = []
default-features = false

[dependencies.openssl]
version = "0.10.68"
features = ["vendored"]

[dependencies.reqwest]
version = "0.12.8"
features = ["json", "blocking"]

[dependencies.rocket]
version = "0.5.1"
features = ["tls"]

[dependencies.rocket-basicauth]
version = "3.0.0"
features = []

[dependencies.serde]
version = "1.0.210"
features = []

[dependencies.serde_json]
version = "1.0.128"
features = []
default-features = false

[dependencies.simple_logger]
version = "5.0.0"
features = ["time", "timestamps", "colored", "colors"]
default-features = false

[dependencies.tokio]
version = "1.40.0"
features = []
default-features = false

[dependencies.zip]
version = "2.2.0"
features = ["deflate-miniz"]
default-features = false

[dev-dependencies]
pretty_assertions = "1.4.1"

[target."cfg(target_os = \"linux\")".dependencies]
systemd-journal-logger = "2.2.0"

[target."cfg(target_os = \"linux\")".dev-dependencies]

[target."cfg(target_os = \"linux\")".build-dependencies]

[features]
default = []
nightly = []

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release.package]

[lints.clippy]
no_effect_underscore_binding = "allow"
ignored_unit_patterns = "allow"
all = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 1 }
perf = { level = "deny", priority = 1 }
style = { level = "deny", priority = 1 }
complexity = { level = "deny", priority = 1 }
correctness = { level = "deny", priority = 1 }
missing_const_for_fn = "warn"
cargo = { level = "warn", priority = 1 }
cargo_common_metadata = "warn"
absolute_paths = "warn" # FIXME: broken in nightly, should be deny
alloc_instead_of_core = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
big_endian_bytes = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
error_impl_error = "deny"
exhaustive_enums = "deny"
exhaustive_structs = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
integer_division = "deny"
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_untyped = "deny"
little_endian_bytes = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_inline_in_public_items = "deny"
mixed_read_write_in_expression = "deny"
modulo_arithmetic = "deny"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
needless_raw_strings = "deny"
non_ascii_literal = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
ref_patterns = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
semicolon_outside_block = "deny"
shadow_reuse = "deny"
shadow_unrelated = "deny"
single_char_lifetime_names = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
string_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unreachable = "deny"
unseparated_literal_suffix = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"
needless_lifetimes = "deny"
